# adk-two-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/a2a_consumer/: agent.py
app/smart_brief/: agent.json  agent.py
tests/: test_a2a_consumer.py  test_workflow.py
